--- a/eshop/templates/eshop/product_details.html
+++ b/eshop/templates/eshop/product_details.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Detaille du produit {{ pk.nom }}</title>
+    <title>Detaille du produit {{ product.name }}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+<header> <h1>{{ product.name }}</h1> </header>
+
+<main class="m-5">
+
+    <article class="m-5">
+        <p>{{ product.description }}</p>
+    </article>
+
+    <article>
+        {% if  %}
+
+        {% endif  %}
+    </article>
+
+    <form action="">
+        <label>Entrez votre mail <input type="email"></label>
+        <label>Entrez votre avis <input type="text"></label>
+        <button type="submit">Confirmer</button>
+    </form>
+
+</main>
+
 
 </body>
 </html>
