--- a/eshop/templates/eshop/product_list.html
+++ b/eshop/templates/eshop/product_list.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Eshop !</title>
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 <header>
@@ -13,10 +14,10 @@
 <section>
     <h1>Tout nos produits</h1>
     {% for prod in products %}
-        <h3 href="{% url "product_details.html" pk=prod.pk %}"> {{ prod.name }} </h3>
+        <a class="" href="{% url "product_details" pk=prod.pk %}"> {{ prod.name }} </a>
 
         {% if prod.availability == True %}
-            <p> {{ prod.price }}</p>
+            <p> {{ prod.price }} .- CHF</p>
         {% else %}
             <p>Victime de son succès...</p>
         {% endif %}
