Ajout de bouton de route + deployement du projet sur pythonanywhere

--- a/eshop/templates/eshop/product_details.html
+++ b/eshop/templates/eshop/product_details.html
@@ -40,6 +40,7 @@
         <button type="submit" class="btn btn-primary">Envoyer</button>
     </form>
 </div>
+<a href="{% url 'product_list' %}"> Revenir a la liste des produits </a>
 </main>
 
 
