Ajout affichage de message d'erreur quand aucun produit trouver dans produit_search.js

--- a/eshop/static/css/style.css
+++ b/eshop/static/css/style.css
@@ -1,5 +1,6 @@
+/* template Generée avec ChatGPT, puis modifié par moi même */
 #results {
-    list-style: none;      /* enlève les puces */
+    list-style: none;
     padding: 0;
     margin: 0;
     margin-bottom: 20px;
