--- a/eshop/templates/eshop/product_details.html
+++ b/eshop/templates/eshop/product_details.html
@@ -42,7 +42,7 @@
                                             </a>
                                         </div>
                                     </div>
-                                    <p class="mb-0">{{ r.review|safe }}</p>
+                                    <p class="mb-0">{{ r.review }}</p>
                                 </div>
                             </div>
                         </div>
