--- a/eshop/templates/eshop/header.html
+++ b/eshop/templates/eshop/header.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,26 +10,38 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static '/css/style.css' %}">
 </head>
+
 <body class="d-flex flex-column min-vh-100 bg-light">
 
-<header class="bg-primary text-white py-5 text-center">
-    <div class="container">
-        <h1 class="display-4 fw-bold">Bienvenue dans notre Eshop !</h1>
-        <p class="lead">Ici, vous trouverez tout ce dont vous avez besoin.</p>
+    <header class="bg-primary text-white py-5 text-center">
+        <div class="container">
+            <h1 class="display-4 fw-bold">Bienvenue dans notre Eshop !</h1>
+            <p class="lead">Ici, vous trouverez tout ce dont vous avez besoin.</p>
+        </div>
+    </header>
+    <div class="bg-primary text-end py-2 pe-4 sticky-top">
+        <a href="{% url 'cart_detail' %}"
+            class="text-white text-decoration-none btn btn-outline-light position-relative">
+            <i class="fa fa-shopping-cart"></i> Panier
+            {% if cart|length > 0 %}
+            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                {{ cart|length }}
+            </span>
+            {% endif %}
+        </a>
     </div>
-    <!-- Recherche avec JS ci dessous -->
-</header>
 
-{% block content %}
-{% endblock %}
+    {% block content %}
+    {% endblock %}
 
 
-<footer class="bg-dark text-white py-4 mt-auto">
-    <div class="container text-center">
-        <small>Osman.hsnv@eduge.ch - Competence WEBA</small>
-    </div>
-</footer>
+    <footer class="bg-dark text-white py-4 mt-auto">
+        <div class="container text-center">
+            <small>Osman.hsnv@eduge.ch - Competence WEBA</small>
+        </div>
+    </footer>
 
 
 </body>
+
 </html>
